Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Omoda C5 thêm bản giá rẻ 539 triệu đồng",
+    "content": "Omoda C5 vừa ra mắt phiên bản giá rẻ Luxury tại thị trường Việt Nam với mức giá 539 triệu đồng. Mẫu xe này giữ nguyên động cơ 1.5 và trang bị tiêu chuẩn như cụm đèn halogen cùng các tính năng an toàn cơ bản. Đặc biệt, Omoda còn có chương trình khuyến mãi dành cho 555 khách hàng đặt cọc đầu tiên, giảm giá còn 499 triệu đồng và tặng gói bảo dưỡng miễn phí. Sự xuất hiện của C5 Luxury được kỳ vọng sẽ làm tăng sự cạnh tranh trong phân khúc xe gầm cao cỡ B.",
+    "link": "https://vnexpress.net/omoda-c5-them-ban-gia-re-539-trieu-dong-4864644.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Omoda C5 Luxury có giá bao nhiêu khi ra mắt?",
+    "answers": [
+      {
+        "text": "539 triệu đồng",
+        "correct": true
+      },
+      {
+        "text": "589 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "669 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "499 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "538 triệu đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mỹ để ngỏ bảo vệ Ukraine theo Điều 5 của NATO",
     "content": "Đặc phái viên Mỹ Steve Witkoff thông báo rằng Ukraine hiện không thể gia nhập NATO trong tương lai gần, nhưng vấn đề bảo đảm an ninh cho Ukraine theo Điều 5 của NATO vẫn đang được thảo luận. Ông Witkoff cho biết Mỹ và châu Âu đang xem xét khả năng cung cấp các đảm bảo an ninh cho Ukraine mà không cần Kiev gia nhập liên minh. Thủ tướng Italy Giorgia Meloni cũng đã đề xuất mở rộng áp dụng Điều 5 của NATO cho Ukraine nhằm mang lại sự an toàn hơn cho quốc gia này.",
     "link": "https://dantri.com.vn/the-gioi/my-de-ngo-bao-ve-ukraine-theo-dieu-5-cua-nato-20250323082122298.htm",
@@ -614,6 +645,33 @@
     ]
   },
   {
+    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
+    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
+    "answers": [
+      {
+        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích gì cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Làm tăng cảm giác đói nhanh hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nguyên nhân khiến trẻ nôn trớ",
     "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
     "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
@@ -640,33 +698,6 @@
       },
       {
         "text": "Do trẻ không ăn uống đầy đủ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
-    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
-    "answers": [
-      {
-        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
-        "correct": false
-      },
-      {
-        "text": "Không có lợi ích gì cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Làm tăng cảm giác đói nhanh hơn.",
         "correct": false
       }
     ]
@@ -1975,37 +2006,6 @@
     ]
   },
   {
-    "title": "Hủy mỡ để giảm 'bụng bia'",
-    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
-    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm 'bụng bia'?",
-    "answers": [
-      {
-        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
-        "correct": false
-      },
-      {
-        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
-        "correct": false
-      },
-      {
-        "text": "Không làm gì mà vẫn giảm cân",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ho ra máu cảnh báo bệnh gì?",
     "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
     "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
@@ -2063,6 +2063,37 @@
       },
       {
         "text": "Không cần ăn gì đặc biệt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hủy mỡ để giảm 'bụng bia'",
+    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
+    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm 'bụng bia'?",
+    "answers": [
+      {
+        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
+        "correct": false
+      },
+      {
+        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
+        "correct": false
+      },
+      {
+        "text": "Không làm gì mà vẫn giảm cân",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
         "correct": false
       }
     ]
@@ -2242,33 +2273,6 @@
     ]
   },
   {
-    "title": "Sinh con đầu lòng ở tuổi 54",
-    "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
-    "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Một người phụ nữ 54 tuổi đã sinh con thành công như thế nào?",
-    "answers": [
-      {
-        "text": "Nhờ thụ tinh ống nghiệm (IVF)",
-        "correct": true
-      },
-      {
-        "text": "Bằng phương pháp tự nhiên",
-        "correct": false
-      },
-      {
-        "text": "Thông qua thuốc điều trị",
-        "correct": false
-      },
-      {
-        "text": "Bằng cách nhận con nuôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
     "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
     "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
@@ -2291,6 +2295,33 @@
       },
       {
         "text": "Không áp dụng cho mọi bệnh nhân",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sinh con đầu lòng ở tuổi 54",
+    "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
+    "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Một người phụ nữ 54 tuổi đã sinh con thành công như thế nào?",
+    "answers": [
+      {
+        "text": "Nhờ thụ tinh ống nghiệm (IVF)",
+        "correct": true
+      },
+      {
+        "text": "Bằng phương pháp tự nhiên",
+        "correct": false
+      },
+      {
+        "text": "Thông qua thuốc điều trị",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách nhận con nuôi",
         "correct": false
       }
     ]
