Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "HLV Kluivert bị xem là 'con rối' ở đội tuyển Indonesia",
+    "content": "HLV Patrick Kluivert của đội tuyển Indonesia đang bị chỉ trích và coi như 'con rối', khi ông chỉ đứng nhìn các trợ lý của mình chỉ đạo cầu thủ trong trận thua 1-5 trước Australia tại vòng loại World Cup 2026. Nhiều ý kiến cho rằng Kluivert không thực sự có quyền lực trong đội bóng và thực tế là trợ lý Alex Pastoor mới là người chỉ đạo chính. Các chuyên gia bóng đá từ Hà Lan cũng đã bày tỏ sự nghi ngờ về khả năng huấn luyện của Kluivert ngay từ khi ông được bổ nhiệm.",
+    "link": "https://vnexpress.net/hlv-kluivert-bi-xem-la-con-roi-o-doi-tuyen-indonesia-4864713.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 6,
+    "question": "Tại sao HLV Kluivert bị coi là 'con rối' ở đội tuyển Indonesia?",
+    "answers": [
+      {
+        "text": "Vì ông chỉ đứng nhìn các trợ lý chỉ đạo cầu thủ.",
+        "correct": true
+      },
+      {
+        "text": "Ông không có kinh nghiệm làm HLV.",
+        "correct": false
+      },
+      {
+        "text": "Ông thường thay đổi chiến thuật trong trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Các cầu thủ không nghe lời ông.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người vi phạm phải khắc phục hậu quả, một cách giáo dục ý thức cần nhân rộng",
     "content": "Bài viết đề cập đến việc xử lý các hành vi vi phạm nơi công cộng bằng cách yêu cầu người vi phạm tự khắc phục hậu quả. Gần đây, Công an xã Mỹ Lâm, Kiên Giang đã yêu cầu hai thanh niên rải tờ rơi phải thu gom lại những tờ rơi đã phát. Hình thức này nhận được sự đồng tình từ dư luận vì không chỉ mang tính răn đe mà còn giáo dục ý thức trách nhiệm với cộng đồng. Việc áp dụng cách xử lý này rộng rãi có thể giúp cải thiện tình trạng vi phạm nơi công cộng.",
     "link": "https://tuoitre.vn/nguoi-vi-pham-phai-khac-phuc-hau-qua-mot-cach-giao-duc-y-thuc-can-nhan-rong-20250316110522365.htm",
@@ -103,6 +130,33 @@
       },
       {
         "text": "Vì người vi phạm không cần phải làm gì cả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hải Dương dừng xây khu hành chính tập trung",
+    "content": "Tỉnh Hải Dương đã quyết định tạm dừng 6 dự án sử dụng vốn ngân sách, trong đó có dự án xây dựng khu hành chính tập trung với tổng vốn đầu tư 1.550 tỷ đồng. Khu hành chính dự kiến sẽ được xây dựng trên diện tích 8,7 ha và bao gồm các khối nhà cho các cơ quan chính trị, hành chính và các sở, ban, ngành. Việc tạm dừng các dự án này nhằm phục vụ cho quá trình sắp xếp lại tổ chức bộ máy hành chính của tỉnh.",
+    "link": "https://vnexpress.net/hai-duong-dung-xay-khu-hanh-chinh-tap-trung-4864730.html",
+    "cat": "thoi-su",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Hải Dương dừng xây khu hành chính tập trung?",
+    "answers": [
+      {
+        "text": "Do sắp xếp tổ chức bộ máy hành chính",
+        "correct": true
+      },
+      {
+        "text": "Vì không đủ vốn đầu tư",
+        "correct": false
+      },
+      {
+        "text": "Để xây dựng thêm trường học",
+        "correct": false
+      },
+      {
+        "text": "Do phản đối từ người dân",
         "correct": false
       }
     ]
@@ -1817,32 +1871,28 @@
     ]
   },
   {
-    "title": "Ho ra máu cảnh báo bệnh gì?",
-    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
-    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
+    "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
+    "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
+    "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
     "cat": "suc-khoe",
-    "positivity": 4,
+    "positivity": 7,
     "importance": 8,
-    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
+    "question": "Nặn mụn có thể gây ra nguy cơ mắc uốn ván không?",
     "answers": [
       {
-        "text": "Ung thư phổi",
+        "text": "Có, nếu không thực hiện đúng cách.",
         "correct": true
       },
       {
-        "text": "Cảm cúm",
+        "text": "Không, luôn an toàn.",
         "correct": false
       },
       {
-        "text": "Viêm họng",
+        "text": "Chỉ nếu mụn lớn.",
         "correct": false
       },
       {
-        "text": "Cao huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau dạ dày",
+        "text": "Chỉ nếu có vết thương sâu.",
         "correct": false
       }
     ]
@@ -1910,28 +1960,32 @@
     ]
   },
   {
-    "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
-    "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
-    "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
+    "title": "Ho ra máu cảnh báo bệnh gì?",
+    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
+    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 4,
     "importance": 8,
-    "question": "Nặn mụn có thể gây ra nguy cơ mắc uốn ván không?",
+    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
     "answers": [
       {
-        "text": "Có, nếu không thực hiện đúng cách.",
+        "text": "Ung thư phổi",
         "correct": true
       },
       {
-        "text": "Không, luôn an toàn.",
+        "text": "Cảm cúm",
         "correct": false
       },
       {
-        "text": "Chỉ nếu mụn lớn.",
+        "text": "Viêm họng",
         "correct": false
       },
       {
-        "text": "Chỉ nếu có vết thương sâu.",
+        "text": "Cao huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Đau dạ dày",
         "correct": false
       }
     ]
@@ -2598,33 +2652,6 @@
     ]
   },
   {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -2651,6 +2678,33 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
