Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Cuộc ngược dòng khó tin của CLB nữ TP HCM",
+    "content": "Trong trận tứ kết AFC Champions League nữ diễn ra vào tối 22/3, CLB nữ TP HCM đã tạo nên một cuộc ngược dòng đầy kịch tính khi vượt qua Abu Dhabi Country với tỷ số 5-4. Dù bị dẫn 0-3 sau hiệp một, các cầu thủ TP HCM đã bùng nổ trong hiệp hai, ghi liền 5 bàn và lội ngược dòng thành công. Chiến thắng này không chỉ giúp TP HCM vào bán kết mà còn đánh dấu một cột mốc quan trọng trong lịch sử bóng đá nữ Việt Nam.",
+    "link": "https://vnexpress.net/cuoc-nguoc-dong-kho-tin-cua-clb-nu-tp-hcm-4864737.html",
+    "cat": "the-thao",
+    "positivity": 10,
+    "importance": 9,
+    "question": "CLB nữ TP HCM đã lội ngược dòng như thế nào trong trận đấu với Abu Dhabi Country?",
+    "answers": [
+      {
+        "text": "Họ ghi 5 bàn và thắng 5-4.",
+        "correct": true
+      },
+      {
+        "text": "Họ thua 0-3 và không ghi bàn.",
+        "correct": false
+      },
+      {
+        "text": "Họ hòa 4-4 và bị loại.",
+        "correct": false
+      },
+      {
+        "text": "Họ ghi 3 bàn và thắng 3-2.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "HLV Kluivert bị xem là 'con rối' ở đội tuyển Indonesia",
     "content": "HLV Patrick Kluivert của đội tuyển Indonesia đang bị chỉ trích và coi như 'con rối', khi ông chỉ đứng nhìn các trợ lý của mình chỉ đạo cầu thủ trong trận thua 1-5 trước Australia tại vòng loại World Cup 2026. Nhiều ý kiến cho rằng Kluivert không thực sự có quyền lực trong đội bóng và thực tế là trợ lý Alex Pastoor mới là người chỉ đạo chính. Các chuyên gia bóng đá từ Hà Lan cũng đã bày tỏ sự nghi ngờ về khả năng huấn luyện của Kluivert ngay từ khi ông được bổ nhiệm.",
     "link": "https://vnexpress.net/hlv-kluivert-bi-xem-la-con-roi-o-doi-tuyen-indonesia-4864713.html",
@@ -229,33 +256,6 @@
     ]
   },
   {
-    "title": "6 món ăn người tiểu đường nên tránh",
-    "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
-    "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người tiểu đường nên tránh những món ăn nào để kiểm soát đường huyết?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu tinh bột, kẹo ngọt, thịt mỡ, thực phẩm chiên, trái cây sấy khô, sữa nguyên kem",
-        "correct": true
-      },
-      {
-        "text": "Chỉ nên ăn trái cây tươi",
-        "correct": false
-      },
-      {
-        "text": "Nên ăn nhiều thịt mỡ",
-        "correct": false
-      },
-      {
-        "text": "Chỉ uống nước ngọt không đường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguyên nhân gây cứng khớp",
     "content": "Cứng khớp là triệu chứng phổ biến do nhiều nguyên nhân khác nhau, bao gồm tư thế không đúng, thoái hóa khớp, viêm khớp, và bệnh gout. Thoái hóa khớp là nguyên nhân chính, dẫn đến đau và hạn chế vận động do sự bào mòn sụn khớp. Các bệnh viêm khớp, như viêm khớp dạng thấp và viêm cột sống dính khớp, cũng gây ra tình trạng cứng khớp, đặc biệt là vào buổi sáng. Chấn thương khớp và chế độ ăn uống kém cũng góp phần làm tăng nguy cơ cứng khớp.",
     "link": "https://vnexpress.net/nguyen-nhan-gay-cung-khop-4864539.html",
@@ -278,6 +278,33 @@
       },
       {
         "text": "Chỉ do tuổi tác cao",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món ăn người tiểu đường nên tránh",
+    "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
+    "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người tiểu đường nên tránh những món ăn nào để kiểm soát đường huyết?",
+    "answers": [
+      {
+        "text": "Thực phẩm giàu tinh bột, kẹo ngọt, thịt mỡ, thực phẩm chiên, trái cây sấy khô, sữa nguyên kem",
+        "correct": true
+      },
+      {
+        "text": "Chỉ nên ăn trái cây tươi",
+        "correct": false
+      },
+      {
+        "text": "Nên ăn nhiều thịt mỡ",
+        "correct": false
+      },
+      {
+        "text": "Chỉ uống nước ngọt không đường",
         "correct": false
       }
     ]
@@ -1041,28 +1068,28 @@
     ]
   },
   {
-    "title": "Chứng hoang tưởng",
-    "content": "Chứng hoang tưởng là tình trạng tâm lý liên quan đến cảm giác nghi ngờ và sợ hãi về người khác mà không có căn cứ thực tế. Triệu chứng có thể bao gồm sự nghi ngờ dữ dội, cảm giác bị đe dọa, và khó khăn trong việc thư giãn. Chứng hoang tưởng thường liên quan đến các rối loạn tâm thần khác và có thể được điều trị bằng liệu pháp tâm lý và thuốc. Nếu không được kiểm soát, tình trạng này có thể dẫn đến những biến chứng nghiêm trọng và hành vi gây nguy hiểm.",
-    "link": "https://vnexpress.net/chung-hoang-tuong-4863575.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Chứng hoang tưởng là gì?",
+    "title": "Bỏ việc lương cao, sang Việt Nam 'tìm ý nghĩa cuộc đời'",
+    "content": "Choi Won Jun, một người Hàn Quốc, đã từ bỏ công việc lương cao ở Seoul để tìm kiếm ý nghĩa cuộc sống tại TP HCM, Việt Nam. Sau khi trải qua cuộc sống áp lực và nhàm chán, anh quyết định học nấu ăn và mở quán thịt nướng. Jun cảm nhận được sự ấm áp, tình người và tinh thần thoải mái của người Việt Nam, điều mà anh không tìm thấy ở Hàn Quốc. Giờ đây, anh làm việc chăm chỉ nhưng cảm thấy hạnh phúc và thỏa mãn hơn nhiều với cuộc sống mới của mình.",
+    "link": "https://vnexpress.net/bo-viec-luong-cao-sang-viet-nam-tim-y-nghia-cuoc-doi-4864410.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tại sao Choi Won Jun quyết định bỏ việc ở Hàn Quốc để sống tại Việt Nam?",
     "answers": [
       {
-        "text": "Chứng hoang tưởng là tình trạng nghi ngờ và sợ hãi không có căn cứ về người khác.",
+        "text": "Vì anh muốn tìm kiếm ý nghĩa cuộc sống và hạnh phúc hơn.",
         "correct": true
       },
       {
-        "text": "Chứng hoang tưởng là một loại bệnh truyền nhiễm.",
+        "text": "Vì anh muốn kiếm nhiều tiền hơn.",
         "correct": false
       },
       {
-        "text": "Chứng hoang tưởng là một trạng thái tạm thời không cần điều trị.",
+        "text": "Vì anh muốn trở thành đầu bếp nổi tiếng.",
         "correct": false
       },
       {
-        "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
+        "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
         "correct": false
       }
     ]
@@ -1157,28 +1184,28 @@
     ]
   },
   {
-    "title": "Bỏ việc lương cao, sang Việt Nam 'tìm ý nghĩa cuộc đời'",
-    "content": "Choi Won Jun, một người Hàn Quốc, đã từ bỏ công việc lương cao ở Seoul để tìm kiếm ý nghĩa cuộc sống tại TP HCM, Việt Nam. Sau khi trải qua cuộc sống áp lực và nhàm chán, anh quyết định học nấu ăn và mở quán thịt nướng. Jun cảm nhận được sự ấm áp, tình người và tinh thần thoải mái của người Việt Nam, điều mà anh không tìm thấy ở Hàn Quốc. Giờ đây, anh làm việc chăm chỉ nhưng cảm thấy hạnh phúc và thỏa mãn hơn nhiều với cuộc sống mới của mình.",
-    "link": "https://vnexpress.net/bo-viec-luong-cao-sang-viet-nam-tim-y-nghia-cuoc-doi-4864410.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tại sao Choi Won Jun quyết định bỏ việc ở Hàn Quốc để sống tại Việt Nam?",
+    "title": "Chứng hoang tưởng",
+    "content": "Chứng hoang tưởng là tình trạng tâm lý liên quan đến cảm giác nghi ngờ và sợ hãi về người khác mà không có căn cứ thực tế. Triệu chứng có thể bao gồm sự nghi ngờ dữ dội, cảm giác bị đe dọa, và khó khăn trong việc thư giãn. Chứng hoang tưởng thường liên quan đến các rối loạn tâm thần khác và có thể được điều trị bằng liệu pháp tâm lý và thuốc. Nếu không được kiểm soát, tình trạng này có thể dẫn đến những biến chứng nghiêm trọng và hành vi gây nguy hiểm.",
+    "link": "https://vnexpress.net/chung-hoang-tuong-4863575.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Chứng hoang tưởng là gì?",
     "answers": [
       {
-        "text": "Vì anh muốn tìm kiếm ý nghĩa cuộc sống và hạnh phúc hơn.",
+        "text": "Chứng hoang tưởng là tình trạng nghi ngờ và sợ hãi không có căn cứ về người khác.",
         "correct": true
       },
       {
-        "text": "Vì anh muốn kiếm nhiều tiền hơn.",
+        "text": "Chứng hoang tưởng là một loại bệnh truyền nhiễm.",
         "correct": false
       },
       {
-        "text": "Vì anh muốn trở thành đầu bếp nổi tiếng.",
+        "text": "Chứng hoang tưởng là một trạng thái tạm thời không cần điều trị.",
         "correct": false
       },
       {
-        "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
+        "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
         "correct": false
       }
     ]
@@ -1965,6 +1992,37 @@
     ]
   },
   {
+    "title": "Ho ra máu cảnh báo bệnh gì?",
+    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
+    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
+    "answers": [
+      {
+        "text": "Ung thư phổi",
+        "correct": true
+      },
+      {
+        "text": "Cảm cúm",
+        "correct": false
+      },
+      {
+        "text": "Viêm họng",
+        "correct": false
+      },
+      {
+        "text": "Cao huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Đau dạ dày",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
     "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
     "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
@@ -2049,37 +2107,6 @@
       },
       {
         "text": "Chỉ nếu có vết thương sâu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ho ra máu cảnh báo bệnh gì?",
-    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
-    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
-    "answers": [
-      {
-        "text": "Ung thư phổi",
-        "correct": true
-      },
-      {
-        "text": "Cảm cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Cao huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau dạ dày",
         "correct": false
       }
     ]
@@ -2232,33 +2259,6 @@
     ]
   },
   {
-    "title": "Sinh con đầu lòng ở tuổi 54",
-    "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
-    "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Một người phụ nữ 54 tuổi đã sinh con thành công như thế nào?",
-    "answers": [
-      {
-        "text": "Nhờ thụ tinh ống nghiệm (IVF)",
-        "correct": true
-      },
-      {
-        "text": "Bằng phương pháp tự nhiên",
-        "correct": false
-      },
-      {
-        "text": "Thông qua thuốc điều trị",
-        "correct": false
-      },
-      {
-        "text": "Bằng cách nhận con nuôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
     "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
     "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
@@ -2281,6 +2281,33 @@
       },
       {
         "text": "Không áp dụng cho mọi bệnh nhân",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sinh con đầu lòng ở tuổi 54",
+    "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
+    "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Một người phụ nữ 54 tuổi đã sinh con thành công như thế nào?",
+    "answers": [
+      {
+        "text": "Nhờ thụ tinh ống nghiệm (IVF)",
+        "correct": true
+      },
+      {
+        "text": "Bằng phương pháp tự nhiên",
+        "correct": false
+      },
+      {
+        "text": "Thông qua thuốc điều trị",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách nhận con nuôi",
         "correct": false
       }
     ]
@@ -3479,33 +3506,6 @@
       },
       {
         "text": "Ông cảm thấy mệt mỏi và buồn nôn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tại sao phụ nữ nhìn 'già hơn' đàn ông cùng tuổi?",
-    "content": "Nghiên cứu gần đây chỉ ra rằng nhiều phụ nữ trẻ, đặc biệt là Gen Z, có xu hướng trông già hơn so với đàn ông cùng tuổi, chủ yếu do lạm dụng tiêm thẩm mỹ như botox và filler. Việc này không chỉ làm da mất tính đàn hồi mà còn dẫn đến hiện tượng \"mặt gối\" và nhanh chóng lão hóa. Trong khi đó, đàn ông thường duy trì vẻ ngoài trẻ trung hơn nhờ lối sống lành mạnh và ít lạm dụng các phương pháp thẩm mỹ.",
-    "link": "https://vnexpress.net/tai-sao-phu-nu-nhin-gia-hon-dan-ong-cung-tuoi-4864154.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao phụ nữ lại nhìn già hơn đàn ông cùng tuổi?",
-    "answers": [
-      {
-        "text": "Do lạm dụng tiêm thẩm mỹ như botox và filler.",
-        "correct": true
-      },
-      {
-        "text": "Vì chế độ ăn uống kém.",
-        "correct": false
-      },
-      {
-        "text": "Do không chăm sóc da.",
-        "correct": false
-      },
-      {
-        "text": "Vì không tập thể dục.",
         "correct": false
       }
     ]
