--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,37 @@
     ]
   },
   {
+    "title": "Gia đình Kim Sae Ron dừng tung ảnh, đáp trả nghi vấn về nhân chứng giả",
+    "content": "Gia đình của nữ diễn viên Kim Sae Ron đã quyết định không công bố thêm hình ảnh bằng chứng hẹn hò giữa cô và Kim Soo Hyun do những bức ảnh này được cho là ảnh hưởng đến danh dự của cố nghệ sĩ. Họ mong muốn nhận được lời xin lỗi từ Kim Soo Hyun nhưng không muốn công bố hình ảnh riêng tư của con gái. Trong khi đó, Kim Soo Hyun phủ nhận việc hẹn hò với Kim Sae Ron khi cô còn vị thành niên và đã kiện gia đình cô về việc phát tán thông tin không chính xác.",
+    "link": "https://dantri.com.vn/giai-tri/gia-dinh-kim-sae-ron-dung-tung-anh-dap-tra-nghi-van-ve-nhan-chung-gia-20250323095009153.htm",
+    "cat": "giai-tri",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Gia đình Kim Sae Ron đã quyết định như thế nào về việc công bố bằng chứng hẹn hò với Kim Soo Hyun?",
+    "answers": [
+      {
+        "text": "Họ quyết định không công bố thêm hình ảnh",
+        "correct": true
+      },
+      {
+        "text": "Họ sẽ công bố thêm bằng chứng",
+        "correct": false
+      },
+      {
+        "text": "Họ sẽ kiện Kim Soo Hyun",
+        "correct": false
+      },
+      {
+        "text": "Họ đã công bố tất cả hình ảnh",
+        "correct": false
+      },
+      {
+        "text": "Họ không quan tâm đến vụ việc này",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "HLV Kluivert bị xem là 'con rối' ở đội tuyển Indonesia",
     "content": "HLV Patrick Kluivert của đội tuyển Indonesia đang bị chỉ trích và coi như 'con rối', khi ông chỉ đứng nhìn các trợ lý của mình chỉ đạo cầu thủ trong trận thua 1-5 trước Australia tại vòng loại World Cup 2026. Nhiều ý kiến cho rằng Kluivert không thực sự có quyền lực trong đội bóng và thực tế là trợ lý Alex Pastoor mới là người chỉ đạo chính. Các chuyên gia bóng đá từ Hà Lan cũng đã bày tỏ sự nghi ngờ về khả năng huấn luyện của Kluivert ngay từ khi ông được bổ nhiệm.",
     "link": "https://vnexpress.net/hlv-kluivert-bi-xem-la-con-roi-o-doi-tuyen-indonesia-4864713.html",
@@ -1925,68 +1956,6 @@
     ]
   },
   {
-    "title": "Ho ra máu cảnh báo bệnh gì?",
-    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
-    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
-    "answers": [
-      {
-        "text": "Ung thư phổi",
-        "correct": true
-      },
-      {
-        "text": "Cảm cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Cao huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau dạ dày",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
-    "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
-    "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người bị liệt dây thần kinh số 7 nên ăn gì để phục hồi sức khỏe?",
-    "answers": [
-      {
-        "text": "Thịt nạc, cá béo, ngũ cốc nguyên hạt",
-        "correct": true
-      },
-      {
-        "text": "Chỉ ăn trái cây",
-        "correct": false
-      },
-      {
-        "text": "Ăn nhiều đồ chiên xào",
-        "correct": false
-      },
-      {
-        "text": "Chỉ uống nước trái cây",
-        "correct": false
-      },
-      {
-        "text": "Không cần ăn gì đặc biệt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hủy mỡ để giảm 'bụng bia'",
     "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
     "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
@@ -2018,6 +1987,37 @@
     ]
   },
   {
+    "title": "Ho ra máu cảnh báo bệnh gì?",
+    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
+    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
+    "answers": [
+      {
+        "text": "Ung thư phổi",
+        "correct": true
+      },
+      {
+        "text": "Cảm cúm",
+        "correct": false
+      },
+      {
+        "text": "Viêm họng",
+        "correct": false
+      },
+      {
+        "text": "Cao huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Đau dạ dày",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
     "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
     "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
@@ -2040,6 +2040,37 @@
       },
       {
         "text": "Chỉ nếu có vết thương sâu.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
+    "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
+    "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người bị liệt dây thần kinh số 7 nên ăn gì để phục hồi sức khỏe?",
+    "answers": [
+      {
+        "text": "Thịt nạc, cá béo, ngũ cốc nguyên hạt",
+        "correct": true
+      },
+      {
+        "text": "Chỉ ăn trái cây",
+        "correct": false
+      },
+      {
+        "text": "Ăn nhiều đồ chiên xào",
+        "correct": false
+      },
+      {
+        "text": "Chỉ uống nước trái cây",
+        "correct": false
+      },
+      {
+        "text": "Không cần ăn gì đặc biệt",
         "correct": false
       }
     ]
@@ -2706,6 +2737,33 @@
     ]
   },
   {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -2732,33 +2790,6 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
@@ -3381,64 +3412,6 @@
       },
       {
         "text": "Học nấu ăn và ca hát",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Kinh tế tư nhân: Bỏ kiếp 'kép phụ' bước lên đối tác",
-    "content": "Bài viết phân tích sự phát triển của kinh tế tư nhân tại Việt Nam, nhấn mạnh việc các doanh nghiệp tư nhân cần được công nhận là đối tác của Nhà nước thay vì chỉ là 'kép phụ'. Ông Trần Chủng, Chủ tịch VARSI, cho rằng cần phải hoàn thiện khung pháp lý để tạo ra môi trường đầu tư công bằng, khuyến khích sự tham gia của khu vực tư nhân vào các dự án hạ tầng lớn. Nếu những vướng mắc về pháp lý và cơ chế được giải quyết, kinh tế tư nhân sẽ đóng vai trò quan trọng trong sự phát triển kinh tế đất nước.",
-    "link": "https://tuoitre.vn/kinh-te-tu-nhan-bo-kiep-kep-phu-buoc-len-doi-tac-20250322084231379.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao kinh tế tư nhân cần được công nhận là đối tác của Nhà nước?",
-    "answers": [
-      {
-        "text": "Để tạo động lực cho sự phát triển và huy động nguồn lực tư nhân vào các dự án hạ tầng.",
-        "correct": true
-      },
-      {
-        "text": "Để giảm thiểu rủi ro cho Nhà nước trong các dự án đầu tư.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng cường sự cạnh tranh giữa các doanh nghiệp tư nhân.",
-        "correct": false
-      },
-      {
-        "text": "Để đảm bảo quyền lợi cho các nhà đầu tư nước ngoài.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hàng trăm viên sỏi đóng thành khối trong mật người đàn ông",
-    "content": "Ông Mỹ, 64 tuổi, đã được phẫu thuật lấy hàng trăm viên sỏi mật sau khi bị đau bụng và vàng da. Siêu âm tại Bệnh viện Đa khoa Tâm Anh TP HCM cho thấy túi mật của ông chứa nhiều sỏi lớn. Bác sĩ đã cắt túi mật và lấy ra hàng trăm viên sỏi kích thước từ 2-5 mm. Sau phẫu thuật, sức khỏe của ông đã cải thiện đáng kể và ông xuất viện sau hai ngày.",
-    "link": "https://vnexpress.net/hang-tram-vien-soi-dong-thanh-khoi-trong-mat-nguoi-dan-ong-4864254.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Ông Mỹ đã gặp vấn đề gì liên quan đến sỏi mật?",
-    "answers": [
-      {
-        "text": "Ông bị đau bụng và vàng da do sỏi mật.",
-        "correct": true
-      },
-      {
-        "text": "Ông bị đau đầu và chóng mặt.",
-        "correct": false
-      },
-      {
-        "text": "Ông bị sốt cao và ho.",
-        "correct": false
-      },
-      {
-        "text": "Ông không có triệu chứng gì.",
-        "correct": false
-      },
-      {
-        "text": "Ông cảm thấy mệt mỏi và buồn nôn.",
         "correct": false
       }
     ]
